fix checkstyle and unused import
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>